--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ buildscript {
         google()
     }
     dependencies {
-		classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         //classpath 'com.android.tools.build:gradle:2.2.1'
- 		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
+        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
     }
 }
 
