--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
-//noinspection GradleCompatible
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 
 android {
@@ -48,19 +46,16 @@ android {
 
 dependencies {
 
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-messaging:17.4.0'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
 
-    //noinspection GradleCompatible,GradleDynamicVersion
-    implementation 'com.android.support:recyclerview-v7:22+'
-    implementation 'com.android.support:support-annotations:22+'
+
+    implementation 'com.android.support:recyclerview-v7:22.2.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.android.support:appcompat-v7:22+'
-    implementation 'com.android.support:cardview-v7:22+'
-    implementation 'com.android.support:design:22+'
-    implementation 'com.android.support:palette-v7:22+'
+    implementation 'com.android.support:appcompat-v7:22.2.1'
+    implementation 'com.android.support:cardview-v7:22.2.1'
+    implementation 'com.android.support:design:22.2.1'
+    implementation 'com.android.support:palette-v7:22.2.1'
 }
