Three dots menu - added Tools (restart ui, phone & go to recovery)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.REBOOT"
         tools:ignore="ProtectedPermissions"/>
+    <uses-permission android:name="android.permission.RECOVERY" tools:ignore="ProtectedPermissions"/>
     <uses-permission android:name="android.permission.DEVICE_POWER"
         tools:ignore="ProtectedPermissions"/>
     <uses-permission android:name="android.permission.INTERNET" />
